--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio - Esteban Karaputny</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
