--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/image/iconporfolio.png" />
+    <link rel="shortcut icon" href="./iconporfolio.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
